--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "ts-node src",
-    "build" : "tsc && node dist"
+    "dev": "ts-node src",
+    "build": "tsc && node dist"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,12 @@
   },
   "homepage": "https://github.com/happyjino/study#readme",
   "devDependencies": {
-    "@types/node": "^18.16.3"
+    "@types/chance": "^1.1.3",
+    "@types/node": "^18.16.3",
+    "@types/ramda": "^0.29.1"
+  },
+  "dependencies": {
+    "chance": "^1.1.11",
+    "ramda": "^0.29.0"
   }
 }
